force-app/main/default/objects/ApprovalProcessControlLineItem__c/ApprovalProcessControlLineItem__c.object-meta.xml
<CustomObject>
    <label>Control de aprobación lineItem</label>
    <nameField>
        <displayFormat>OLI-APC{00000000}</displayFormat>
        <label>Nombre de Control de aprobación lineItem</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Controles de aprobación lineItem</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>