force-app/main/default/objects/ApprovalProcessControlLineItem__c/fields/ApprovalProcess__c.field-meta.xml
<CustomField>
    <fullName>ApprovalProcess__c</fullName>
    <label>Proceso de aprobación</label>
    <referenceTo>ApprovalProcess__c</referenceTo>
    <relationshipLabel>Controles de aprobación lineItem</relationshipLabel>
    <relationshipName>AprovalProcessControlsOLI</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>