force-app/main/default/objects/ApprovalProcessControlLineItem__c/fields/Original__c.field-meta.xml
<CustomField>
    <fullName>Original__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Controles de aprobación lineItem (Producto de oportunidad)</relationshipLabel>
    <relationshipName>ApprovalProcessControlLineItem</relationshipName>
    <type>Lookup</type>
</CustomField>