force-app/main/default/objects/ApprovalProcessControlLineItem__c/fields/Pending__c.field-meta.xml
<CustomField>
    <fullName>Pending__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Por aprobar</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Controles de aprobación lineItem</relationshipLabel>
    <relationshipName>AprovalProcessOLI</relationshipName>
    <type>Lookup</type>
</CustomField>